--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <script>
 $(document).ready(function(){
   $("#Projects").click(function(){
-    $("About Me").hide();
+    $("#About Me").hide();
   });
   $("#Projects").click(function(){
-    $("About Me").show();
+    $("#About Me").show();
   });
 });
 </script>
@@ -17,20 +17,20 @@ $(document).ready(function(){
 
 
 <body>
-	<div id='About Me'>
-		<p> Test 1> </p>
+	<div id="About Me">
+		<p> Test 1 </p>
 	</div>
 
-	<div id='Projects'>
-		<p> Test 2> </p>
+	<div id="Projects">
+		<p> Test 2 </p>
 	</div>
 
-	<div id='Resume'>
-		<p> Test 3> </p>
+	<div id="Resume">
+		<p> Test 3 </p>
 	</div>
 
-	<div id='Contact Me'>
-		<p> Test 4> </p>
+	<div id="Contact Me">
+		<p> Test 4 </p>
 	</div>
 	<p>Hey, this is a work in progress! Check back later for COOL NEW STUFF!!!</p>
 </body>
