Testing, and toggle

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-  $("#Projects").click(function(){
-    $("#About Me").hide();
-  });
-  $("#Projects").click(function(){
-    $("#About Me").show();
+  $("p").click(function(){
+    $("p").toggle;
   });
 });
 </script>
