--- a/index.html
+++ b/index.html
@@ -1,37 +1,90 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-  $("p").click(function(){
-    $("p").toggle;
-  });
-});
-</script>
+  <title>Change your permissions :)</title>
 </head>
 
+<body style="background-image:url('texture.jpg')">
+<style>
+h1
+{
+background-color:#000000;
+font-family:"Impact";
+color:orange;
+text-align:center;
+font-size:2.5em;
+}
+body
+{
+background-color:#000000;
+font-size:100%;
+font-family:"Impact";
+color:orange;
+text-align:center;
+}
+h2 
+{
+background-color:#000000;
+font-size:1.875em;
+font-family:"Impact";
+color:orange;
+text-align:center;
+}
+p
+{
+background-color:#000000;
+font-size:1.500em;
+font-family:"Impact";
+color:orange;
+text-align:center;
+}
+ul
+{
+list-style-type:none;
+margin:0;
+padding:0;
+overflow:hidden;
+}
+li
+{
+float:left;
+}
+a:link,a:visited
+{
+text-align:center;
+font-size:1.875em;
+display:block;
+color:orange;
+background-color:#000000;
+width:160px;
+padding:4px;
+text-transform:uppercase;
+}
+a:hover,a:active
+{
+background-color:black;
+}
+</style>
+    <body>
+    <h1>Hi, I'm Austen Madden</h1>
+      <ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="projects.html">Projects</a></li>
+	<li><a href="contact.html">Contact</a></li>
+	<li><a href="about">About</a></li>
+      </ul>
+
+      
 
 
-<body>
-	<div id="About Me">
-		<p> Test 1 </p>
-	</div>
-
-	<div id="Projects">
-		<p> Test 2 </p>
-	</div>
-
-	<div id="Resume">
-		<p> Test 3 </p>
-	</div>
-
-	<div id="Contact Me">
-		<p> Test 4 </p>
-	</div>
-	<p>Hey, this is a work in progress! Check back later for COOL NEW STUFF!!!</p>
-</body>
-
-
-
+      <h1>Under Construction</h1>
+    <h2>Let me know you were here! Sign the Guestbook!
+    <form name="input" action="html_form_action.asp" method="get">
+      Name: <input type="text" name="user">
+	<input type="submit" value="Submit">
+	      </h2>
+    </form>
+    
+  </body>
 </html>
