--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 <style>
 h1
 {
-background-color:#000000;
+background-color:#D00000;
 font-family:"Impact";
-color:orange;
+color:white;
 text-align:center;
 font-size:2.5em;
 }
 body
 {
-background-color:#000000;
+background-color:#D00000;
 font-size:100%;
 font-family:"Impact";
-color:orange;
+color:white;
 text-align:center;
 }
 h2 
 {
-background-color:#000000;
+background-color:#D00000;
 font-size:1.875em;
 font-family:"Impact";
-color:orange;
+color:white;
 text-align:center;
 }
 p
 {
-background-color:#000000;
+background-color:#D00000;
 font-size:1.500em;
 font-family:"Impact";
-color:orange;
+color:white;
 text-align:center;
 }
 ul
@@ -55,15 +55,15 @@ a:link,a:visited
 text-align:center;
 font-size:1.875em;
 display:block;
-color:orange;
-background-color:#000000;
+color:white;
+background-color:#D00000;
 width:160px;
 padding:4px;
 text-transform:uppercase;
 }
 a:hover,a:active
 {
-background-color:black;
+background-color:white;
 }
 </style>
     <body>
