--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ font-size:2.5em;
 }
 body
 {
-background-color:#D00000;
+background-color:#B7B7B7;
 font-size:100%;
 font-family:"Impact";
 color:white;
