--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Change your permissions :)</title>
+  <title>Austen Madden</title>
 </head>
 
 <body style="background-image:url('texture.jpg')">
