--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Austen Madden</title>
 </head>
 
-<body style="background-image:url('texture.jpg')">
+<body style="background-image:url('gray_jean.png')">
 <style>
 h1
 {
