--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Austen Madden</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="#resume">Resume</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -54,8 +55,8 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Hi, I'm Austen</h1>
+        <p class="lead">I'm a Computer Science student at Ohio State<br> </p>
       </div>
 
     </div><!-- /.container -->
