--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Austen Madden</title>
 
     <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +57,10 @@
       <div class="starter-template">
         <br><br>
         <h1>Hi, I'm Austen</h1>
-        <p class="lead">I'm a Computer Science student at Ohio State<br> </p>
+        <p class="lead">I'm a Computer Science student at Ohio State.<br><br> I program primarily in Java, and branching out to Ruby, C#, and PHP. <br><br>
+            This summer I interned with <a href="http://www.nationwide.com/">Nationwide</a> Innovative Solutions, developing their Salesforce platform. <br><br>
+            Currently I still work part time there.
+        </p>
       </div>
 
     </div><!-- /.container -->
