Added images and links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="dist/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -61,6 +61,9 @@
             This summer I interned with <a href="http://www.nationwide.com/">Nationwide</a> Innovative Solutions, developing their Salesforce platform. <br><br>
             Currently I still work part time there.
         </p>
+
+        <a href="http://github.com/austenmadden"><i class="gh"></i></a>
+        <a href="https://www.linkedin.com/in/austenmadden/"><i class="in"></i></a>
       </div>
 
     </div><!-- /.container -->
