--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             This summer I interned with <a href="http://www.nationwide.com/">Nationwide</a> Innovative Solutions, developing their Salesforce platform. <br><br>
             Currently I still work part time there.
         </p>
-
-        <a href="http://github.com/austenmadden"><i class="gh"></i></a>
-        <a href="https://www.linkedin.com/in/austenmadden/"><i class="in"></i></a>
+        <a href="http://github.com/austenmadden"><img src="gh.png" alt="Github" width="100" height="100" /></a>
+        
+        <a href="https://www.linkedin.com/in/austenmadden/"><img src="in.jpg" alt="Linkedin" width="100" height="100"/></a>
       </div>
 
     </div><!-- /.container -->
