--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </p>
         <a href="http://github.com/austenmadden"><img src="gh.png" alt="Github" width="100" height="100" /></a>
         
-        <a href="https://www.linkedin.com/in/austenmadden/"><img src="in.jpg" alt="Linkedin" width="100" height="100"/></a>
+        <a href="https://www.linkedin.com/in/austenmadden/"><img src="In.jpg" alt="Linkedin" width="100" height="100"/></a>
       </div>
 
     </div><!-- /.container -->
