--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <![endif]-->
   </head>
 
+  <body style="background-image:url('gray_jean.png')">
   <body>
 
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
