--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
       <div class="starter-template">
         <br><br>
-        <h1>Hi, I'm Austen <img src="pic..jpg" alt="Picture" width="100" height="100" /></h1> 
+        <h1>Hi, I'm Austen <img src="pic.jpg" alt="Picture" width="300" height="400" /></h1> 
         <p class="lead">I'm a Computer Science student at Ohio State.<br><br> I program primarily in Java, and branching out to Ruby, C#, and PHP. <br><br>
             This summer I interned with <a href="http://www.nationwide.com/">Nationwide</a> Innovative Solutions, developing their Salesforce platform. <br><br>
             Currently I still work part time there.
         </p>
-        <a href="http://github.com/austenmadden"><img src="gh.png" alt="Github" width="300" height="400" /></a>
+        <a href="http://github.com/austenmadden"><img src="gh.png" alt="Github" width="100" height="100" /></a>
         
         <a href="https://www.linkedin.com/in/austenmadden/"><img src="In.jpg" alt="Linkedin" width="100" height="100"/></a>
       </div>
