--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">Austen Madden</a>
         </div>
@@ -48,6 +49,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="https://drive.google.com/file/d/0B4z6_BbXe7RwQmwxOUpSY2JnTVk/view?usp=sharing">Resume</a></li>
+            <li><img src="headshot.jpg" alt="headshot" width="150" height="200" /></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -57,7 +59,7 @@
 
       <div class="starter-template">
         <br><br>
-        <h1>Hi, I'm Austen          <img src="pic.jpg" alt="Picture" width="150" height="200" /></h1> 
+        <h1>Hi, I'm Austen</h1> 
         <p class="lead">I'm a Computer Science student at Ohio State.<br><br> I program primarily in Java, and branching out to Ruby, C#, and PHP. <br><br>
             This summer I interned with <a href="http://www.nationwide.com/">Nationwide</a> Innovative Solutions, developing their Salesforce platform. <br><br>
             Currently I still work part time there.
