--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="https://drive.google.com/file/d/0B4z6_BbXe7RwQmwxOUpSY2JnTVk/view?usp=sharing">Resume</a></li>
-            <li><img src="headshot.jpg" alt="headshot" width="150" height="200" /></li>
+            <li><img src="headshot.png" alt="headshot" width="75" height="75" /></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
