--- a/index.html
+++ b/index.html
@@ -41,15 +41,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <img src="headshot.png" alt="headshot" width="55" height="55" />
           <a class="navbar-brand" href="#">Austen Madden</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="https://drive.google.com/file/d/0B4z6_BbXe7RwQmwxOUpSY2JnTVk/view?usp=sharing">Resume</a></li>
-            <li><img src="headshot.png" alt="headshot" width="55" height="55" /></li>
+            
           </ul>
         </div><!--/.nav-collapse -->
       </div>
