--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
           
               <br><br>
                 <h1>Hi, I'm Austen</h1> 
-                <p class="lead">I'm a Computer Science student at Ohio State.<br><br> I program primarily in Java, and branching out to Ruby, C#, and PHP. <br><br>
-                  This summer I interned with <a href="http://www.nationwide.com/">Nationwide</a> Innovative Solutions, developing their Salesforce platform. <br><br>
-                  Currently I still work part time there.
+                <p class="lead">I'm a Computer Science student at Ohio State.<br><br> With an interest in both Web Development and Desktop Application Development.<br><br>
+                  This summer I interned with <a href="http://www.nationwide.com/">Nationwide</a> Innovative Solutions, developing their Salesforce platform and still work there part time.<br><br>
                </p>
                 <a href="http://github.com/austenmadden"><img src="gh.png" alt="Github" width="100" height="100" /></a>
         
