--- a/index.html
+++ b/index.html
@@ -7,17 +7,20 @@
 		<meta name="description" content="Home page of Austen Madden">
 		<meta name="viewport" content="width=device-width initial-scale=1">
 		
-		<link rel="stylesheet" type="text/css" href="main.css">
 		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="style/main.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		
 		<title>Austen Madden</title>
 	</head>
 	<body>
 	<div class = "select">
-		<i class="fa fa-home fa-3x"> Home </i>
-		<i class="fa fa-newspaper-o fa-3x"> About </i>
-		<i class="fa fa-file-text-o fa-3x"> Resume </i>
+		<ul>
+			<li><i class="fa fa-home fa-3x"></i>Home</li>
+			<li><i class="fa fa-newspaper-o fa-3x"></i>About</li>
+			<li><i class="fa fa-file-text-o fa-3x"></i>Resume</li>
+		</ul>
+		
 		
 	</div>
 		<div class = "home">
