Design in progress

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 	<body>
 	<div class = "select">
 		<ul>
-			<li><i class="fa fa-home fa-3x"></i>Home</li>
-			<li><i class="fa fa-newspaper-o fa-3x"></i>About</li>
-			<li><i class="fa fa-file-text-o fa-3x"></i>Resume</li>
+			<li><i class="fa fa-home fa"></i> Home</li>
+			<li><i class="fa fa-newspaper-o fa"></i> About</li>
+			<li><a href="https://drive.google.com/file/d/0B4z6_BbXe7RwQmwxOUpSY2JnTVk/view?usp=sharing"><i class="fa fa-file-text-o fa"></i> Resume</a></li>
+			<li><i class="fa fa-laptop fa"></i> Social</li>
+			<li><i class="fa fa-comment fa"></i> Contact</li>
 		</ul>
 		
 		
