Added fadeIn animation

--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
 		$(document).ready(function(){ 
 						   
 			$("#about").click(function() {
-				$(".about").show(); 
+				$(".about").fadeIn(); 
 				$(".home").hide();
 				$(".social").hide();
 				$(".contact").hide();
 			})
 			
 			$("#home").click(function() {
-				$(".home").show(); 
+				$(".home").fadeIn(); 
 				$(".about").hide();
 				$(".social").hide();
 				$(".contact").hide();
 			})
 			
 			$("#social").click(function() {
-				$(".social").show(); 
+				$(".social").fadeIn(); 
 				$(".home").hide();
 				$(".about").hide();
 				$(".contact").hide();
 			})
 			
 			$("#contact").click(function() {
-				$(".contact").show(); 
+				$(".contact").fadeIn(); 
 				$(".home").hide();
 				$(".social").hide();
 				$(".about").hide();
