--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 			<li id = "home"><i class="fa fa-home fa"></i> Home</li>
 			<li id = "about"><i class="fa fa-newspaper-o fa"></i> About</li>
 			<li><a href="https://drive.google.com/file/d/0B4z6_BbXe7RwQmwxOUpSY2JnTVk/view?usp=sharing"><i class="fa fa-file-text-o fa"></i> Resume</a></li>
-			<li id = "social"><i class="fa fa-laptop fa"></i> Social</li>
-			<li id = "contact"><i class="fa fa-comment fa"></i> Contact</li>
+			<li id = "social"><i class="fa fa-comment-o fa"></i> Social</li>
+			<li id = "contact"><i class="fa fa-envelope-o fa"></i> Contact</li>
 		</ul>
 	</div>
 	
