--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 	</div>
 
 	<div class = "about">
-		<p>I'm a Computer Science student at Ohio State with an interest in both Web Development and Desktop Application Development.<br><br>
-			  This summer I interned with <a href="http://www.nationwide.com/">Nationwide</a> Innovative Solutions, developing their Salesforce platform and still work there part time.</p>
+		In December, I'll be finishing up my undergraduate studies at the Ohio State University, studying Computer Science Engineering. In summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; it introduced me to mobile developement and I've been hooked since.
+
+		I currently work as a mobile developer at JPMorgan Chase. Outside of software, I enjoy video games and outdoorsy activities like backpacking. Like games too? Add me on steam: Maddahain. I'm also learning the banjo, which is a pretty rad instrument. 
 	</div>
 	
 	
