--- a/index.html
+++ b/index.html
@@ -53,32 +53,34 @@
 		<ul>
 			<li id = "home"><i class="fa fa-home fa"></i> Home</li>
 			<li id = "about"><i class="fa fa-newspaper-o fa"></i> About</li>
-			<li><a href="https://drive.google.com/file/d/0B4z6_BbXe7RwQmwxOUpSY2JnTVk/view?usp=sharing"><i class="fa fa-file-text-o fa"></i> Resume</a></li>
 			<li id = "social"><i class="fa fa-comment-o fa"></i> Social</li>
-			<li id = "contact"><i class="fa fa-envelope-o fa"></i> Contact</li>
+			<!--<li id = "contact"><i class="fa fa-envelope-o fa"></i> Contact</li>-->
 		</ul>
 	</div>
-	
-	<div class = "home">
-		<P>Hi, I'm Austen Madden, and welcome to my site!</p>
+	<div class = "content">
+		<div class = "home">
+			<P>Hi, I'm Austen Madden, and welcome to my site!</p>
+		</div>
+
+		<div class = "about">
+			<img class="img-circle" src="img/headshot.jpg">
+			<p>In December, I'll be finishing up my undergraduate studies at the Ohio State University, studying Computer Science Engineering. In summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; it introduced me to mobile developement and I've been hooked since. <br/><br/>
+
+			I currently work as a mobile developer at JPMorgan Chase. Outside of software, I enjoy video games and outdoorsy activities like backpacking. Like games too? Add me on steam: Maddahain. I'm also learning the banjo, which is a pretty rad instrument. </P>
+		</div>
+		
+		
+		<div class = "contact">
+			<p>Coming Soon!</p>
+		</div>
+		
+		<div class="social">
+			<ul>
+				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-5x"></i></a></li>
+				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-5x"></i></li>
+			</ul>
+		</div>
 	</div>
 
-	<div class = "about">
-		<p>In December, I'll be finishing up my undergraduate studies at the Ohio State University, studying Computer Science Engineering. In summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; it introduced me to mobile developement and I've been hooked since. <br/><br/>
-
-		I currently work as a mobile developer at JPMorgan Chase. Outside of software, I enjoy video games and outdoorsy activities like backpacking. Like games too? Add me on steam: Maddahain. I'm also learning the banjo, which is a pretty rad instrument. </P>
-	</div>
-	
-	
-	<div class = "contact">
-		<p>Coming Soon!</p>
-	</div>
-	
-	<div class="social">
-	<ul>
-		<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-5x"></i></a></li>
-		<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-5x"></i></li>
-	</ul>
-	</div>
 	</body>
 </html>
