--- a/index.html
+++ b/index.html
@@ -76,8 +76,14 @@
 		
 		<div class="social">
 			<ul>
-				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-5x"></i></a></li>
-				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-5x"></i></li>
+				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin-square fa-5x"></i></a></li>
+				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github-square fa-5x"></i></li>
+
+				<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam-square fa-5x"></i></li>
+
+				<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter-square fa-5x"></i></li>
+
+				
 			</ul>
 		</div>
 	</div>
