--- a/index.html
+++ b/index.html
@@ -54,21 +54,19 @@
 			<li id = "home"><i class="fa fa-home fa"></i> Home</li>
 			<li id = "about"><i class="fa fa-newspaper-o fa"></i> About</li>
 			<li id = "social"><i class="fa fa-comment-o fa"></i> Social</li>
-			<!--<li id = "contact"><i class="fa fa-envelope-o fa"></i> Contact</li>-->
 		</ul>
 	</div>
 	<div class = "content">
 		<div class = "home">
-			<P>Hi, I'm Austen Madden, and welcome to my site!</p>
+			<P>Hi, I'm Austen Madden</p>
 		</div>
 
 		<div class = "about">
-			<img class="img-circle" src="img/headshot.jpg">
+			<img class="img-circle" src="img/headshot.jpg"></img>
 			<p>In December, I'll be finishing up my undergraduate studies at the Ohio State University, studying Computer Science Engineering. In summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; it introduced me to mobile developement and I've been hooked since. <br/><br/>
 
 			I currently work as a mobile developer at JPMorgan Chase. Outside of software, I enjoy video games and outdoorsy activities like backpacking. Like games too? Add me on steam: Maddahain. I'm also learning the banjo, which is a pretty rad instrument. </P>
 		</div>
-		
 		
 		<div class = "contact">
 			<p>Coming Soon!</p>
@@ -77,11 +75,11 @@
 		<div class="social">
 			<ul>
 				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin-square fa-5x"></i></a></li>
-				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github-square fa-5x"></i></li>
+				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github-square fa-5x"></i></a></li>
 
-				<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam-square fa-5x"></i></li>
+				<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam-square fa-5x"></i></a></li>
 
-				<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter-square fa-5x"></i></li>
+				<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter-square fa-5x"></i></a></li>
 
 				
 			</ul>
