--- a/index.html
+++ b/index.html
@@ -64,14 +64,11 @@
 		</ul>
 	</div>
 	<div class = "content">
-		<div class = "home">
-			<P>Hi, I'm Austen Madden, a software developer from Columbus, Ohio.</p>
-		</div>
 
 		<div class = "about">
 			<div class = "bio">
 				<img class="img-circle" src="img/headshot.jpg"></img>
-				<p>In December I'll be finishing up my undergraduate studies at the Ohio State University, with my major in Computer Science & Engineering. In Summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; I'm interested mobile developement but do occasionally tinker and explore other technology. <br/><br/>
+				<p>I'm Austen Madden, a software developer from Columbus, Ohio. In December I'll be finishing up my undergraduate studies at the Ohio State University, with my major in Computer Science & Engineering. In Summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; I'm interested mobile developement but do occasionally tinker and explore other technology. <br/><br/>
 
 				Outside of software, I enjoy video games and outdoorsy activities like backpacking. Like games too? Feel free to dd me on steam: Maddahain. I'm also learning the banjo, which is a pretty rad instrument. </P>
 			</div>
