--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
                         scrollTop: $(".social").offset().top - navHeight
                     }, 1000);
 			})
+
+			$("#skills").click(function() {
+				$('html, body').animate({
+                        scrollTop: $(".skills").offset().top - navHeight
+                    }, 1000);
+			})
 			
 
 		});
@@ -60,6 +66,7 @@
 			<li id = "about">About</li>
 			<li id = "experience">Experience</li>
 			<li id = "projects">Projects</li>
+			<li id = "skills">Skills</li>
 			<li id = "social"> Social</li>
 		</ul>
 	</div>
@@ -68,19 +75,76 @@
 		<div class = "about">
 			<div class = "bio">
 				<img class="img-circle" src="img/headshot.jpg"></img>
-				<p>I'm Austen Madden, a software developer from Columbus, Ohio. In December I'll be finishing up my undergraduate studies at the Ohio State University, with my major in Computer Science & Engineering. In Summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; I'm interested mobile developement but do occasionally tinker and explore other technology. <br/><br/>
+				<br/><br/>
+				<h1 style = "color:white">About</h1>
+				<br/>
+				<p>I'm Austen Madden, a software developer from Columbus, Ohio. In December I'll be finishing up my undergraduate studies at the Ohio State University, with my major in Computer Science & Engineering. In Summer 2015, I started with JPMorgan Chase as an Android Developer and currently work there part time; Primarily I'm interested in mobile developement but do occasionally tinker and explore other technology (including web). <br/><br/>
 
-				Outside of software, I enjoy video games and outdoorsy activities like backpacking. Like games too? Feel free to dd me on steam: Maddahain. I'm also learning the banjo, which is a pretty rad instrument. </P>
+				Outside of software, I enjoy games and outdoorsy activities like backpacking. Like games too? Feel free to dd me on steam: Maddahain. I'm also learning to play the banjo, which is a pretty rad instrument. </P>
 			</div>
 
 			<div class = "companies">
 				<h1> Work Experience </h1>
-				<p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<br/>
+					<h2>
+						January, 2015 - Present<br/>
+						J.P Morgan Chase & Co<br/>
+						Technology Analyst Intern<br/>
+					</h2>
+					<br/>
+					<p>
+						Intern with the Chase Mobile team as an Android Developer. Worked on both native Android apps (Chase & JPM Mobile Banking Apps) as well as Chase web applications (hybrid). Developed primarily using Java, XML, Javascript, CSS, and HTML.
+					</p>
+					<br/>
+					<h2>
+						January, 2015 - May, 2015<br/>
+						Nationwide<br/>
+						Intern, Applications Development<br/>
+					</h2>
+					</br>
+					<p>
+						Applications Development Intern, working primarily on Java Web Services and Salesforce Instances for Nationwide Direct Growth Solutions IT team.
+				    </p>
+					<br/>
+					<h2>
+						May, 2014 – December, 2014<br/>
+						Nationwide<br/>
+						Business Consulting Intern<br/>
+				   </h2>
+					</br>
+					<p>
+						Lead developer for Nationwide Innovative Solutions – Employee Benefits division after position was vacated (interim).
+						Managed, developed, and maintained new and existing projects, on companies Salesforce CRM platform.
+						Primarily developed using APEX, Visualforce, Javascript, CSS, SOQL, and HTML.
+						Created case and service issue app to help track and manage customer issues.
+						Developed automatic document generation application.
+					</p>
 			</div>
 
 			<div class = "projects">
 				<h1> Projects </h1>
-				<p>lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<br/>
+				<h2 style= color:white>
+					Intelligent Mixed Reality<br/>
+			   </h2>
+				</br>
+				<p>	
+					Developed a .Net MVC 5 Web Application for MS SQL database management. Used a combination of web languages (Javascript, CSS, HTML) and C# to deliver a modern frontend.
+				</p>
+				<br/>
+				<h2 style= color:white>
+					Code For Good<br/>
+			   </h2>
+				</br>
+				<p>	
+					Competed in Chase Code for Good hackathon event, and worked with a team to design application for the American Red Cross using the PHP Yii framework.
+				</p>
+			</div>
+			<div class = "skills">
+				<h1>Skills</h1>
+				<h2 style="color:white">Languages</h2><br/> <p>Java, C#, Apex, HTML, CSS, JavaScript, SQL, XML, JSON, and C.</p><br/>
+				<h2 style="color:white">Concepts</h2><br/> <p>Object Oriented Programming, SOAP, REST, Agile</p> <br/>
+				<h2 style="color:white">Platforms</h2> <br/><p>Android, Linux, OSX, Microsoft Windows, .Net MVC, Salesforce</p><br/>
 			</div>
 			<div class = "social">
 				<ul>
