--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			</div>
 			<div class = "skills">
 				<h1>Skills</h1>
-				<h2 style="color:white">Languages</h2><br/> <p>Java, C#, Apex, HTML, CSS, JavaScript, SQL, XML, JSON, and C.</p><br/>
+				<h2 style="color:white">Languages</h2><br/> <p>Java, C#, Apex, HTML, CSS, JavaScript, SQL, XML, JSON, and C</p><br/>
 				<h2 style="color:white">Concepts</h2><br/> <p>Object Oriented Programming, SOAP, REST, Agile</p> <br/>
 				<h2 style="color:white">Platforms</h2> <br/><p>Android, Linux, OSX, Microsoft Windows, .Net MVC, Salesforce</p><br/>
 			</div>
