Fixed Scroll issue when resizing window

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 			$("#about").click(function() {
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
+				} else {
+					navHeight = parseInt($('.select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".about").offset().top - navHeight
@@ -41,6 +43,8 @@
 			$("#experience").click(function() {
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
+				} else {
+					navHeight = parseInt($('.select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".companies").offset().top - navHeight
@@ -54,6 +58,8 @@
 			$("#projects").click(function() {
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
+				} else {
+					navHeight = parseInt($('.select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".projects").offset().top - navHeight
@@ -67,6 +73,8 @@
 			$("#home").click(function() {
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
+				} else {
+					navHeight = parseInt($('.select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".home").offset().top - navHeight
@@ -80,6 +88,8 @@
 			$("#social").click(function() {
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
+				} else {
+					navHeight = parseInt($('.select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".social").offset().top - navHeight
@@ -93,6 +103,8 @@
 			$("#skills").click(function() {
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
+				} else {
+					navHeight = parseInt($('.select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".skills").offset().top - navHeight
