--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 				mobileMenuOn = true; 
 			}
 			menuToggled = false;
-			var navHeight = parseInt($('.select').css('height')); 
+			var navHeight = parseInt($('#select').css('height')); 
 			
 			$("#about").click(function() {
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
 				} else {
-					navHeight = parseInt($('.select').css('height'));
+					navHeight = parseInt($('#select').css('height'));
 				}
 				$('html, body').animate({
-                        scrollTop: $(".about").offset().top - navHeight
-                    }, 1000);
-				$(".select").css("height", "");
+                        scrollTop: $(".bio").offset().top - navHeight
+                    }, 400);
+				$("#select").css("height", "");
 				if (mobileMenuOn) {
 					$("#nav").css("display", "none");
 				}
@@ -44,12 +44,12 @@
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
 				} else {
-					navHeight = parseInt($('.select').css('height'));
+					navHeight = parseInt($('#select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".companies").offset().top - navHeight
-                    }, 1000);
-				$(".select").css("height", "");
+                    }, 400);
+				$("#select").css("height", "");
 				if (mobileMenuOn) {
 					$("#nav").css("display", "none");
 				}
@@ -59,12 +59,12 @@
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
 				} else {
-					navHeight = parseInt($('.select').css('height'));
+					navHeight = parseInt($('#select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".projects").offset().top - navHeight
-                    }, 1000);
-				$(".select").css("height", "");
+                    }, 400);
+				$("#select").css("height", "");
 				if (mobileMenuOn) {
 					$("#nav").css("display", "none");
 				}
@@ -74,12 +74,12 @@
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
 				} else {
-					navHeight = parseInt($('.select').css('height'));
+					navHeight = parseInt($('#select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".home").offset().top - navHeight
-                    }, 1000);
-				$(".select").css("height", "");
+                    }, 400);
+				$("#select").css("height", "");
 				if (mobileMenuOn) {
 					$("#nav").css("display", "none");
 				}
@@ -89,12 +89,12 @@
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
 				} else {
-					navHeight = parseInt($('.select').css('height'));
+					navHeight = parseInt($('#select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".social").offset().top - navHeight
-                    }, 1000);
-				$(".select").css("height", "");
+                    }, 400);
+				$("#select").css("height", "");
 				if (mobileMenuOn) {
 					$("#nav").css("display", "none");
 				}
@@ -104,12 +104,12 @@
 				if (mobileMenuOn) {
 					navHeight = parseInt($('#mobile').css('height'));
 				} else {
-					navHeight = parseInt($('.select').css('height'));
+					navHeight = parseInt($('#select').css('height'));
 				}
 				$('html, body').animate({
                         scrollTop: $(".skills").offset().top - navHeight
-                    }, 1000);
-				$(".select").css("height", "");
+                    }, 400);
+				$("#select").css("height", "");
 				if (mobileMenuOn) {
 					$("#nav").css("display", "none");
 				}
@@ -117,17 +117,30 @@
 
 			$("#mobile").click(function() {
 				if (!menuToggled) {
-					$(".select").css("height", "100%");
+					$("#select").css("height", "100%");
 					$("#nav").css("display", "block");
 					$("#nav").css("width", "100px");
 					menuToggled = true;
 				} else {
-					$(".select").css("height", "");
+					$("#select").css("height", "");
 					$("#nav").css("display", "none");
 					menuToggled = false;
 				}
 
 			})
+
+			$(window).scroll(function() {
+				var scrollDistance = $(window).scrollTop();
+    			
+
+    			if (scrollDistance === 0) {
+    				$('#select').addClass("selectStart");
+    				$('#select').removeClass("select");
+    			} else {
+    				$('#select').addClass("select");
+    				$('#select').removeClass("selectStart");
+    			}
+			});
 			
 			if (mobileMenuOn) {
 				toggleMobileMenuOn();
@@ -150,20 +163,20 @@
 		function toggleMobileMenuOn() {
 			 $("#nav").css("display", "none");
 			 $("#mobile").css("display", "block");
-			 $("#contentContainer").css("margin-top", "0px");
 		}
 
 		function toggleMobileMenuOff() {
 			$("#nav").css("display", "inline-block");
 			$("#mobile").css("display", "none");
-			$("#contentContainer").css("margin-top", "70px");
 			$("#nav").css("width", "");
+
+
 		}
 	</script>
 	
 	<body>
 	
-	<div class = "select">
+	<div class = "selectStart" id = "select">
 		<div class = "mobile" id = "mobile">
 				Menu
 		</div>
@@ -179,6 +192,12 @@
 	<div class = "content" id = "contentContainer">
 
 		<div class = "about">
+
+			<div class = "landing">
+				<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+				<h1>Hello I'm Austen Madden</h1>
+			</div>
+
 			<div class = "bio">
 				<img class="img-circle" src="img/headshot.jpg"></img>
 				<br/><br/>
@@ -254,12 +273,14 @@
 			</div>
 			<div class = "social">
 				<ul>
-				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin-square fa-5x"></i></a></li>
-				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github-square fa-5x"></i></a></li>
+				<li><a href="https://www.linkedin.com/in/austenmadden/"><i class="fa fa-linkedin fa-5x"></i></a></li>
+				<li><a href="https://github.com/austenmadden/"><i class="fa fa-github fa-5x"></i></a></li>
 
-				<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam-square fa-5x"></i></a></li>
+				<li><a href="https://steamcommunity.com/profiles/76561198022783849"><i class="fa fa-steam fa-5x"></i></a></li>
 
-				<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter-square fa-5x"></i></a></li>
+				<li><a href="https://twitter.com/aus10madden"><i class="fa fa-twitter fa-5x"></i></a></li>
+
+				<li><a href="http://codepen.io/austenmadden/"><i class="fa fa-codepen fa-5x"></i></a></li>
 
 				
 			</ul>
